Revision history for Git::Annex

{{$NEXT}}
    - annex-to-annex: Fix path passed to git-annex-find(1) when
      looking for missing files.

0.002     2020-02-24 07:33:02-07:00 America/Phoenix
    - Fix logic in an example in Git::Annex::BatchCommand SYNOPSIS.
    - annex-review-unused: 'b' should go back one entry not two.

0.001     2020-02-12 12:33:47-07:00 America/Phoenix
    - First public release.